AC_INIT([rcbrowser], [1.0], [rodrigorivascosta@gmail.com])
AC_CONFIG_AUX_DIR([auxdir])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_SUBST(AM_CPPFLAGS, " ")
AC_SUBST(AM_CFLAGS, "-Wall")
AC_SUBST(AM_CXXFLAGS, "-Wall")

AC_PROG_CXX
AM_PATH_GTK_2_0

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
